# site_api

./: .env  .gitignore  Cargo.toml  README.md  Roadmap.txt  Rocket.toml.example  Session.vim  scratch
migrations/: 20210922082103_initial.sql
scripts/: deploy  release  test
src/: error.rs  lib.rs  main.rs  migrator.rs  test_support.rs  worker.rs
src/controllers/: checkout_sessions_controller.rs  configs_controller.rs  documents_controller.rs  mod.rs  payments.rs  students.rs
src/migrations/: 20210922082103_initial.sql  20220429010000_remove_invoicing_day.sql
src/models/: .mod.rs.swp  checkout_session.rs  degree.rs  discord.rs  invoice.rs  mod.rs  monthly_charge.rs  payment.rs  plan.rs  program.rs  site.rs  student.rs  subscription.rs
src/templates/checkout_sessions/: show.html  show.html.tera
src/templates/emails/: payment_link.html.tera  welcome.html.tera
src/tests/: stripe_event.json
