[package]
name = "daoeducation"
version = "0.1.0"
authors = ["nubis <yo@nubis.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stripe-rust = { git = "https://github.com/wyyerd/stripe-rs" }
recaptcha = "0.4.1"
tokio = "0.2"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
features = ["tera_templates", "json"]

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
regex = "1"
guerrilla = "0.1.4"
mockito = "0.28"
