[package]
name = "daoeducation"
version = "0.1.0"
authors = ["nubis <yo@nubis.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.2.0", features = ["full"] }
lazy_static = "1.4.0"
tera = "1"
validator = { version = "0.12", features = ["derive"] }
thiserror = "1.0"
sqlx = { version = "0.5.7", features = [ "postgres", "runtime-tokio-native-tls", "offline", "chrono", "json", "decimal" ] }
chrono = { version = "0.4", features = ["serde"] }
chronoutil = "0.2.3"
chbs = "0.1.0"
ureq = { version = "2.2.0", features = ["json"] }
hmac = "0.11.0"
sha2 = "0.9.8"
hex = "0.4.3"
base64 = "*"
sqlx-models-derive = { git = "https://github.com/constata-eu/sqlx-models-derive" }

[dependencies.stripe-rust]
path = "/home/nubis/stripe-rs"
default-features = false
features = ["full", "rustls-tls", "webhook-events"]

#git = "https://github.com/wyyerd/stripe-rs" 

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
regex = "1"
guerrilla = "0.1.4"
mockito = "0.28"
anyhow = "*"

[lib]
path = "src/lib.rs"
name = "daoe_api"

[[bin]]
path = "src/main.rs"
name = "api_server"

[[bin]]
path = "src/worker.rs"
name = "worker"

[[bin]]
path = "src/migrator.rs"
name = "migrator"
